# Project-MDR

./: .gitignore  README.md
Track_A/: README.md  mdr.py  src.env
Track_A/e2e_test/: Makefile  README.md  main.cpp  vec_add_kernel.hip
Track_B/amdisa_annotate/: CMakeLists.txt  ParsedProgram.h  README.md  attn_bkwd_non_causal-hip-amdgcn-amd-amdhsa-gfx950.s  attn_bkwd_non_causal-hip-amdgcn-amd-amdhsa-gfx950_parsed.txt  kernel_isa.s  kernel_isa_parsed.txt  main.cpp  output.txt
Track_B/amdisa_annotate/docs/: API_DOCUMENTATION.md  HOW_TO_USE_API.md
Track_B/amdisa_annotate/examples/: api_usage_demo.cpp
Track_B/amdisa_annotate/src/: AMDGCNAssembly.cpp  AMDGCNAssembly.h  AMDGPUMetadata.cpp  AMDGPUMetadata.h  main.cpp  parse_utils.cpp  parse_utils.h
Track_B/dummyFiles/: AMDISAAsmParser.cpp
Track_B/llvm-project/: bkwd.s  inst_operands.txt  j_cmake.sh  output.s  parse.sh  run_cmake.sh  test_amdisa.mlir  test_amdisa2.mlir
Track_B/llvm-project/mlir/include/mlir/Dialect/: CMakeLists.txt
Track_B/llvm-project/mlir/include/mlir/Dialect/AMDISA/: CMakeLists.txt  Passes.h  Passes.td
Track_B/llvm-project/mlir/include/mlir/Dialect/AMDISA/IR/: AMDISAOps.h  AMDISAOps.td  CMakeLists.txt
Track_B/llvm-project/mlir/lib/: RegisterAllDialects.cpp  RegisterAllPasses.cpp
Track_B/llvm-project/mlir/lib/Dialect/: CMakeLists.txt
Track_B/llvm-project/mlir/lib/Dialect/AMDISA/IR/: AMDISAOps.cpp  CMakeLists.txt
Track_B/llvm-project/mlir/lib/Dialect/AMDISA/Transforms/: CMakeLists.txt  LowerToGPUInlineAsm.cpp
Track_B/llvm-project/mlir/tools/: CMakeLists.txt
Track_B/llvm-project/mlir/tools/amdisa-translate/: CMakeLists.txt  mdr.cpp  mdr.h  test.s
Track_B/llvm-project/my_test/: GPUkernel.mlir  pipeline.py
